# ml-beginners

./: README.md  pyproject.toml
1-regression/1-tool/: assignment.ipynb  learn.ipynb
1-regression/2-data/: learn.ipynb
1-regression/3-linear/: learn.ipynb
1-regression/4-logistic/: learn.ipynb
2-classification/1-clearning/: learn.ipynb
2-classification/2-classification/: learn.ipynb
2-classification/3-classifiers/: learn.ipynb
3-clustering/1-visualization/: learn.ipynb
3-clustering/2-knn/: learn.ipynb
4-nlp/1-introduction/: learn.ipynb
4-nlp/2-task/: learn.ipynb
4-nlp/3-translation-sentiment/: learn.ipynb
5-time-series/1-svr/: learn.ipynb
5-time-series/2-svr/: learn.ipynb
6-reinforcement/1-qlearn/: learn.ipynb
data/: cuisines_cleaned.csv
